--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -68,15 +68,27 @@
         "enabled": true,
         "hideRecommendedArticles": false,
         "size": "80px",
-        "disable": [
-            5,
-            6
-        ]
+        "firstName": "Birashimishije",
+        "secondName": "Sinzi Ibyaribyo",
+        "thirdName": "Uhmm",
+        "fourthName": "Birasekeje",
+        "fifthName": "Sibyo",
+        "sixthName": "Birababaje"
     },
     "powerbar": {
         "enabled": true,
         "defaultEmote": 1,
         "verticalPosition": "10px",
+        "items": [
+            "facebook",
+            "twitter",
+            "linkedin",
+            "whatsapp",
+            "messenger",
+            "pinterest",
+            "flipboard",
+            "viber"
+        ],
         "mode": "horizontal"
     }
 };
