--- a/templates/search.html
+++ b/templates/search.html
@@ -1,5 +1,13 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<script async src='https://cse.google.com/cse.js?cx=partner-pub-3242762948116825:bk80lqgxitc'></script><div class="gcse-searchresults-only"></div>
+    <!--/ Latest News Area Start -->
+    <section class="utf_latest_new_area pb-bottom-20">
+        <div class="container">
+            <div class="row" id="posts">
+                    <script async src='https://cse.google.com/cse.js?cx=partner-pub-3242762948116825:bk80lqgxitc'></script><div class="gcse-searchresults-only"></div>
+            </div>
+        </div>
+        
+    </section>
 {% endblock content %}
