--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -27,194 +27,232 @@
 
 {% block dij %}
 <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5fc64d2aad82460011c4da93&product=inline-share-buttons" async="async"></script>
-
-<script type="text/javascript">
-
-  var VUUKLE_CONFIG = {
-    "apiKey": "d63ffec1-bc9b-408f-8041-e2a626f02584",
-    "host": "byosehano.com",
-    "articleId": "https://byosehano.com{{ post.get_absolute_url }}",
-    "img": "https://byosehano.com{{ post.thumbnail.url }}",
-    "tags": "!!! UP TO 3 TAGS SEPARATED BY COMMA !!!",
-    "url": "https://byosehano.com{{ post.get_absolute_url }}",
-    "title": "{{ post.title }}",
-    "author": "{{ post.author.username }}",
-    "language": "en",
-    "recommendedArticles": false,
-    "globalRecommendations": false,
-    "wideImages": false,
-    "comments": {
-        "enabled": true,
-        "hideRecommendedArticles": false,
-        "editorOptions": [
-            "bold",
-            "italic",
-            "underline",
-            "url",
-            "blockquote",
-            "code",
-            "list",
-            "image",
-            "gif"
-        ],
-        "transliteration": {
-            "language": "en",
-            "enabledByDefault": false
-        },
-        "hideCommentInputBox": false,
-        "commentingClosed": false,
-        "maxChars": 3000,
-        "countToLoad": 5
-    },
-    "emotes": {
-        "enabled": true,
-        "hideRecommendedArticles": false,
-        "size": "80px",
-        "firstName": "Birashimishije",
-        "secondName": "Sinzi Ibyaribyo",
-        "thirdName": "Uhmm",
-        "fourthName": "Birasekeje",
-        "fifthName": "Sibyo",
-        "sixthName": "Birababaje"
-    },
-    "powerbar": {
-        "enabled": true,
-        "defaultEmote": 1,
-        "verticalPosition": "10px",
-        "items": [
-            "facebook",
-            "twitter",
-            "linkedin",
-            "whatsapp",
-            "messenger",
-            "pinterest",
-            "flipboard",
-            "viber"
-        ],
-        "mode": "horizontal"
-    }
-};
-
-  //⛔️ DON'T EDIT BELOW THIS LINE
-  (function() {
-    var d = document,
-        s = d.createElement('script');
-        
-    s.src = 'https://cdn.vuukle.com/platform.js';
-    (d.head || d.body).appendChild(s);
-  })();
-</script>
 {% endblock dij %}
 
-{% block loading_text %}
-    <span>{{ post.title|title }}</span>
-{% endblock %}
-
 {% block content %}
-        <!-- Start News Details Area -->
-        <section class="news-details-area">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-md-12">
-                        <div class="blog-details-desc">
 
-                            <div class="article-content">
-                                <h3 style="text-align: center;">{{ post.title|title }}</h3>
-                                <div class="article-image">
-                                    <img src="{{ post.thumbnail.url }}" loading="lazy" style="width: 100%;" alt="{{ post.title }}">
-                                </div>
-                                <span><a href="#">{{ post.author.username|title }}</a> / {{ post.publish|naturalday }} / <a href="#">{{ post.comments.count }} Comment</a></span>
-                                <div>
-                                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-                                  <!-- link_article_ase -->
-                                  <ins class="adsbygoogle"
-                                      style="display:block"
-                                      data-ad-client="ca-pub-3242762948116825"
-                                      data-ad-slot="5571681914"
-                                      data-ad-format="auto"
-                                      data-full-width-responsive="true"></ins>
-                                  <script>
-                                      (adsbygoogle = window.adsbygoogle || []).push({});
-                                  </script>
-                                    {{ post.body|safe }}
-                                    
-                                    <div class="sharethis-inline-share-buttons">
-                                         <!-- ShareThis BEGIN -->
-                                        <div class="sharethis-inline-share-buttons"></div>
-                                        <!-- ShareThis END -->
-                                    </div>
-                                    <!-- EMOTES WRAPPER: Place it where you want emotes to be displayed -->
-                                    <div id="vuukle-emote"></div>
-                                </div>
-                            </div>
+{% if request|is_mobile %}
+<style>
+  .entry-content img {
+    max-width: 100%;
+    max-height: auto;
+  }
+</style>
+{% else %}
+<style>
+  .entry-content img {
+    max-width: 100%;
+    max-height: auto;
+  }
+</style>
+{% endif %}
 
-                            
+<section class="utf_block_wrapper">
 
-                            <div class="post-navigation">
-                                <div class="navigation-links">
-                                    <div class="nav-previous">
-                                        <a href="{{ prev_post.get_absolute_url }}">
-                                            <i class='bx bx-chevron-left'></i>
-                                            Prev Post
-                                        </a>
-                                    </div>
-                                    <div class="nav-next">
-                                        <a href="{{ next_post.get_absolute_url }}">
-                                            Next Post
-                                            <i class='bx bx-chevron-right'></i>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
 
-                            <!-- COMMENTS WRAPPER: Place it where you want comments to be displayed -->
-                            <div id="vuukle-comments"></div>
-                        </div>
-                    </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-12">
+        <div class="single-post">
+          <div class="post-media post-featured-image"> <img src="{{ post.thumbnail.url }}" style="object-fit: cover;max-height: 500px;" class="img-fluid" alt="{{ post.title }}">
+          </div>
+          <div class="utf_post_title-area"> <a class="utf_post_cat" href="#">{{ post.category.name }}</a>
+            <h1 class="utf_post_title">{{ post.title }}</h1>
+            <div class="utf_post_meta"> <span class="utf_post_author"> By <a
+                  href="#">{{ post.author.username|title }}</a> </span> <span class="utf_post_date"><i
+                  class="fa fa-clock-o"></i>{{ post.publish|naturalday }}</span> <span class="post-hits"><i
+                  class="fa fa-eye"></i>{{ post.views }}</span> <span class="post-comment"><i
+                  class="fa fa-comments-o"></i> <a href="#"
+                  class="comments-link"><span>{{ post.comments.count }}</span></a></span> </div>
 
-                    <div class="col-lg-4">
-                        <aside class="widget-area" style="margin-top: 80px;">
 
-                            <section class="widget widget_latest_news_thumb">
-                                <h3 class="widget-title">Izindi wasoma</h3>
+          </div>
 
-                                {% for post in similar_posts %}
-                                    <article class="item">
-                                        <a href="{{ post.get_absolute_url }}" class="thumb">
-                                            <img src="{{ post.thumbnail.url }}" style="width: 100%;object-fit: cover;" loading="lazy" role="img"/>
-                                        </a>
-                                        <div class="info">
-                                            <h4 class="title usmall"><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h4>
-                                            <span>{{ post.publish|naturalday }}</span>
-                                        </div>
-                                    </article>
-                                {% endfor %}
+          <div class="utf_post_content-area">
+            <div class="entry-content">
+              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+              <!-- link_article_ase -->
+              <ins class="adsbygoogle"
+                  style="display:block"
+                  data-ad-client="ca-pub-3242762948116825"
+                  data-ad-slot="5571681914"
+                  data-ad-format="auto"
+                  data-full-width-responsive="true"></ins>
+              <script>
+                  (adsbygoogle = window.adsbygoogle || []).push({});
+              </script>
+              {{ post.body|safe }}
+              <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+              <ins class="adsbygoogle"
+                  style="display:block"
+                  data-ad-format="autorelaxed"
+                  data-ad-client="ca-pub-3242762948116825"
+                  data-ad-slot="6139822818"></ins>
+              <script>
+                  (adsbygoogle = window.adsbygoogle || []).push({});
+              </script>
 
-                            </section>
-
-                            <section class="widget widget_popular_posts_thumb">
-                                <h3 class="widget-title">Facebook Page</h3>
-                                <iframe loading="lazy" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbyosehano%2F&tabs=pages&width=340&height=213&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-                                width="340" height="200" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
-                                allowTransparency="true" allow="encrypted-media"></iframe>
-                            </section>
-
-                            <section class="widget widget_tag_cloud">
-                                <h3 class="widget-title">Ibyakunzwe</h3>
-
-                                <div class="tagcloud">
-                                    {% for tag in popular_tags %}
-                                        <a href="{% url 'web:article_tag' tag.slug %}">{{ tag }}</a>
-                                    {% endfor %}
-                                </div>
-                            </section>
-
-                        </aside>
-                    </div>
-
-                </div>
             </div>
-        </section>
-        <!-- Start News Details Area -->
+            <div class="tags-area clearfix">
+              <div class="post-tags">
+                <span>Tags:</span>
+                {% for tag in post.tags.all %}
+                <a href="{% url 'web:article_tag' tag.slug %}"># {{ tag }}</a>
+                {% endfor %}
+              </div>
+            </div>
+            
+          </div>
+        </div>
 
+        <nav class="post-navigation clearfix">
+          <div class="post-previous">
+            <a href="{{ prev_post.get_absolute_url }}"> <span><i class="fa fa-angle-left"></i>Previous Post</span>
+              <h3>{{ prev_post.title }}</h3>
+            </a>
+          </div>
+          <div class="post-next">
+            <a href="{{ next_post.get_absolute_url }}"> <span>Next Post <i class="fa fa-angle-right"></i></span>
+              <h3>{{ next_post.title }}</h3>
+            </a>
+          </div>
+        </nav>
+
+        <div class="author-box">
+          <div class="author-img pull-left"> <img src="{% static 'circled-logo.png' %}"
+              style="height: 80px;width: 80px;" alt=""> </div>
+          <div class="author-info">
+            <h3>ByoseHano</h3>
+            <p>Menya Byinshi igihe Nyacyo</p>
+          </div>
+        </div>
+
+
+        <!-- Post comment start -->
+        <div id="comments" class="comments-area block">
+          <h3 class="utf_block_title"><span>{{ post.comments.count }} Comments</span></h3>
+          <ul class="comments-list">
+            <li>
+
+              {% for comment in post.comments.all %}
+
+              <div class="comment {% if forloop.last %} last {% endif %}"> <img class="comment-avatar pull-left" alt=""
+                  src="images/news/user1.png">
+                <div class="comment-body">
+                  <div class="meta-data"> <span class="comment-author">{{ comment.name }}</span> <span
+                      class="comment-date pull-right">{{ commment.publish|naturalday }}</span> </div>
+                  <div class="comment-content">
+                    {{ comment.body }}
+                  </div>
+                  <div class="text-left"> <a class="comment-reply" href="#"><i class="fa fa-share"></i> Reply</a>
+                  </div>
+                </div>
+              </div>
+
+              {% endfor %}
+
+            </li>
+          </ul>
+        </div>
+        <!-- Post comment end -->
+
+        <!--/ Comments Form Start -->
+        <div class="comments-form">
+          <h3 class="title-normal">Siga ubutumwa</h3>
+          <form method="POST" action="{{ post.get_absolute_url }}">
+            {% csrf_token %}
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  {{ form_comment.name }}
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  {{ form_comment.email }}
+                </div>
+              </div>
+              <div class="col-md-12">
+                <div class="form-group">
+                  {{ form_comment.body }}
+                </div>
+              </div>
+            </div>
+            <div class="clearfix">
+              <button class="comments-btn btn btn-primary" type="submit">Post Comment</button>
+            </div>
+          </form>
+        </div>
+        <!-- Comments form end -->
+      </div>
+
+      <div class="col-lg-4 col-md-12">
+        <div class="sidebar utf_sidebar_right">
+          
+          <div class="widget color-default">
+            <h3 class="utf_block_title"><span>Izindi wasoma</span></h3>
+            <div class="utf_list_post_block">
+              <ul class="utf_list_post">
+                {% for post in similar_posts %}
+                <li class="clearfix">
+                  <div class="utf_post_block_style post-float clearfix">
+                    <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid" src="{{ post.thumbnail.url }}"
+                          alt="{{ post.title }}"> </a></div>
+                    <div class="utf_post_content">
+                      <h2 class="utf_post_title title-small"> <a
+                          href="{{ post.get_absolute_url }}">{{ post.title|title|slice:"70" }}...</a> </h2>
+                      <div class="utf_post_meta"> <span class="utf_post_author"><i class="fa fa-user"></i> <a
+                            href="#">{{ post.author.username|title }}</a></span> <span class="utf_post_date"><i
+                            class="fa fa-eye"></i>
+                          {{ post.views }}</span> </div>
+                    </div>
+                  </div>
+                </li>
+                {% endfor %}
+              </ul>
+            </div>
+          </div>
+
+          <div class="widget m-bottom-0">
+            <h3 class="utf_block_title"><span>Like our Page</span></h3>
+            <div class="utf_newsletter_block">
+              <iframe
+                src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fbyosehano%2F&tabs=pages&width=340&height=213&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
+                width="340" height="213" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                allowTransparency="true" allow="encrypted-media"></iframe>
+            </div>
+
+          </div>
+
+          <div class="widget">
+            <h3 class="utf_block_title"><span>Dukurikire</span></h3>
+            <ul class="social-icon">
+              <li><a href="https://twitter.com/byosehano/" target="_blank"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://fb.me/byosehano/" target="_blank"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://instagram.com/byosehano/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://byosehano.com/feed" target="_blank"><i class="fa fa-rss"></i></a></li>
+              <!--<li><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                  <li><a href="#" target="_blank"><i class="fa fa-vimeo-square"></i></a></li>
+                  <li><a href="#" target="_blank"><i class="fa fa-youtube"></i></a></li>-->
+            </ul>
+
+          </div>
+
+        
+          <div class="widget widget-tags">
+            <h3 class="utf_block_title"><span>Ibyakunzwe</span></h3>
+            <ul class="unstyled clearfix">
+              {% for tag in popular_tags %}
+              <li><a href="{% url 'web:article_tag' tag.slug %}">{{ tag }}</a></li>
+              {% endfor %}
+
+            </ul>
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 {% endblock content %}
